app/assets/stylesheets/peoplefinder/application.scss
@import '_colours'; // GDS colour mixins
@import "peoplefinder_colours";
@import "people";
@import "groups";
@import "home";
@import "search_box";
@import "org_browser";
@import "suggestions";
@import "feedback";
@import "help-area";

@import "design-patterns/buttons";
@import "measurements";
@import "elements/helpers";


*{
  box-sizing: border-box;
}

footer {
  .footer-meta-inner {
    width: 100%!important;
  }

  .footer-content {
    overflow: hidden;

    ul {
      width: 75%;
      float: left;
      line-height: 2.5!important;

      @media screen and (min-width: 640px) {
        height: 160px!important;
        line-height: 260px!important;
      }
    }

    .copyright {
      width: 25%;
      float: right;

      a {
        display: block;
      }
    }
  }
}

.form-control {
  max-width: 100% !important;
}

#report_link {
  float: left;
  top: 75px;
  position: relative;

  @media screen and (max-width: 320px) {
    margin-bottom: 1em;
  }
}

#last_update {
  float: right;
  @media screen and (min-width: 768px){
    top: 75px;
    position: relative;
  }
}

.breadcrumbs {
  margin-top: 1em;
  margin-bottom: -9px;

  ol {
    li {
      display: inline-block;
    }
    li::after {
      content: ' > ';
    }
    li:last-child:after {
      content: '';
    }
  }
}

.image-background {
  position: relative;
}
.image-background img {
  position: absolute;
}
#flash-messages {
  text-align: center;
  .flash-message {
    margin: 15px 0;
    padding: 15px;
  }
  .notice {
    background-color: $notice-bg;
  }
  .error {
    background-color: $error-bg;
  }
}

a {
  text-decoration: none;

  &.underlined {
    text-decoration: underline;
  }
}

a:hover {
  text-decoration: underline;
}

h1, h2 {
  margin: 30px 0;
  border-bottom: 1px solid $blackish;
}

h1.no-line, h2.no-line {
  border-bottom: 0;
}

h2.line-above, h2.h3.line-above, h3.line-above, .line-above {
  margin-top: 30px;
  padding-top: 20px;
  border-top: 1px solid $blackish;
  border-bottom: 0;
}

h1.h3, h2.h3 {
  font-size: 24px;
  margin: 3px 0 2px 0;
}

h2.h4 {
  font-size: 19px;
}

h4 {
  margin-top: 6px;
}

strong {
  font-weight: bold;
}

.group-title {
  margin-bottom: 30px;

  h1 {
    border: 0 !important;
    margin: 30px 0 0 0;
    max-width: 50%;
  }
}

hr {
  clear: both;
}

.spacer-5 {
  height: 5px;
}

.spacer-10 {
  height: 10px;
}

.spacer-15 {
  height: 15px;
}

.spacer-20 {
  height: 20px;
}

.spacer-25 {
  height: 25px;
}

.spacer-45 {
  height: 45px;
}

.spacer-55 {
  height: 55px;
}

select.form-control {
  -webkit-appearance: menulist;
}

.editing-alert {
  background-color: $turqoise;
  text-align: center;
  padding:1em;
  height: auto;
}
form {
  position: relative;
}
.button.top-button{
  position: absolute;
  top:-5em;
  right:0;
  margin-right: 0;
}

.button-secondary {
  @include button($grey-3);
  padding: em(10) em(15) em(5) em(15);
  margin: 0 $gutter-half $gutter-half 0;
}

form .text .wider   {
    width: 95%;
    height: 205px;
}

.save-cancel-actions {
  padding-top: 30px;
  border-top: 1px solid $blackish;
}

.delete-actions {
  padding: 30px 0;
  border-top: 1px solid $blackish;

  .deletable {
    background: transparent image-url('icon_delete.png') no-repeat 0;
    padding: 10px 0 0 45px;
    height: 35px;
  }
  .opaque {
    color: rgba($darkblue, .50);
    opacity: .50;
  }
}

form input[readonly] {
  background-color: $grey-3;

  &:focus {
    outline: none;
  }
}

.form-hint{
  word-wrap: break-word;
}

.editable-summary {
  clear: both;
  .title {
    background-color: $paleblue;
    float: left;
    padding: 8px 15px 8px 8px;
    margin-right: 15px;
    max-width: 70%;
    strong {
      padding-right: 15px;
    }
  }
  .cta {
    padding: 8px;
    float: left;
  }
}

@mixin shared-error {
  border: 0 solid $error-border;
  background: $error-bg;
  padding: 15px;
  width: 60%;
}

.alert-error {
  @include shared-error;

  border-width: 4px;
  margin-bottom: 30px;
}

.gov-uk-field-error {
  @include shared-error;

  border-left-width: 4px;

  input {
    width: 90%;
  }

  .error {
    color: $error-text;
    font-size: 0.7em;
    line-height: 2.2em;
    margin-left: 4px;
  }
}

.completing {
  .incomplete {
    border: 0 solid $green;
    background: $palegreen;
    padding: 15px;
    width: 60%;

    border-left-width: 4px;

    input {
      width: 90%;
    }
  }
}

.completion-prompt {
  border: 02px solid $green;
  color: $green;
  background: $palegreen;
  padding: 15px;

  p {
    margin: 0;
    font-weight: bold;
  }
}

.login-button {
  text-align: center;
  margin: 5px 0 10px 0;
  padding: 7px 30px;
}

.login-email-info {
  background: #ededed image-url('icon_info.png') scroll no-repeat 15px 20px;
  padding: 15px 15px 20px 90px;
  margin-top: 15px;
  font-size: 1.2em;
}

@media screen and (max-width: 640px) {
 .form-hint{
   width: 50%;
 }
}

@media screen and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
  .form-control {
    width: 50%;
  }
}

@media screen and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 3) {
  .form-control {
    width: 55%;
  }
}

label.form-label-bold {
  .form-hint {
    font-size: 17px;
  }
}
label.mandatory:after {
  content: '*';
}

label.form-label-staff-nr {
  margin-top: 20px;
}

fieldset {
  legend.form-label-bold {
    display: block;
    margin: 3px 0 9px 0;
  }
}
textarea.form-control {
  width: 95%;
  height: 205px;
}

.textarea-word-count {
  &.error {
    color: $error-colour;
  }
}

.header-app-name {
  a {
    color: $white;
    &:hover {
      text-decoration: none;
    }
  }
}

#global-header #logo img {
  width: 254px;
  padding-right:0px;
}

.login-bar {
  text-align: right;
  padding: 0.5em 1em;
  background: $grey-3;

  span {
    margin: 0.4em;
  }

  .logout-link {
    border-left: 1px solid $black;
    padding-left: 0.4em;
    margin-left: 0;
  }
}

.edit-links {
  background: $grey-3;
  padding: 0.5em;
  padding-bottom: 0.3em;
  position: relative;
  top: 15px;
  width: 100%;
  float: right;

  @media screen and (max-width: 640px) {
    width: 97%;
  }

  a {
    display: block;
    padding-left: 30px;
    margin: 0.4em;
    line-height: 2;

    &.add-new-person {
      background: image-url('icon_add_person.png') scroll no-repeat 0 0;
    }

    &.edit-this-team, &.edit-this-person {
      background: image-url('icon_edit_team.png') scroll no-repeat 0 0;
    }

    &.add-new-sub-team {
      background: image-url('icon_add_subteam.png') scroll no-repeat 0 0;
    }
  }
}

.formatted-text {
  ul li {
    list-style-type: disc;
    margin-left: 20px;
  }

  ol li {
    list-style-type: decimal;
    margin-left: 25px;
  }
}

.csv-upload-errors table {
  margin: 30px 0;
}

@import 'retinal_images';

